fixed z-index problem with fireworks

--- a/src/Timey.scss
+++ b/src/Timey.scss
@@ -69,4 +69,9 @@
             }
         }
     }
+    .fireworks-container {
+        & > * {
+            z-index: -1;
+        }
+    }
 }
